fixed margin on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .responderSection, .survivorDiv, .boxy {
   display: none;
 }
@@ -67,6 +74,7 @@ body {
   background-color: #FFFBFA;
   border: 1px solid #c2c2d6;
   border-radius: 5px;
+  width: inherit;
 }
 
 .confirmSurvivor {
